--- a/ChatSample/wwwroot/index.html
+++ b/ChatSample/wwwroot/index.html
@@ -6,7 +6,7 @@
         .container {
             background-color: #3f9ad6;
             ;
-            box-shadow: 0 0 15px 4px rgba(198, #5DCCD365, 65, 0.42);
+            box-shadow: 0 0 15px 4px #3f9ad6;
             border-radius: 10px;
             padding-left: 20px;
             padding-right: 20px;
@@ -44,11 +44,9 @@
             color: #fff;
             font-weight: 600;
             border-radius: 5px;
-            /* width: 100%;*/
         }
 
         h1 {
-            /* font-size: 20pt;*/
             padding-top: 10px;
             color: #fff;
         }
@@ -59,14 +57,12 @@
         <h1>VC LockDown Alert</h1>
         <input type="text" onchange="UpdateName" id="Name">
 
-        <textarea id="message"  class="textareastuff"  rows="15" cols="33">
+        <textarea id="message" class="textareastuff" rows="15" cols="33">
 
 </textarea>
 
 
         <!--<input type="textarea" id="message" rows="4" />-->
-        
-        
         </br>
         <input type="button" id="sendmessage" value="Send Message" /></br>
         <ul id="discussion"></ul>
