--- a/ChatSample/wwwroot/index.html
+++ b/ChatSample/wwwroot/index.html
@@ -16,6 +16,10 @@
         <textarea id="message" class="textareastuff" rows="15"></textarea><br />
 
 
+        <input type="text" id="RoomLockdown" value="room Locked down">
+        <ul id="roomLockdownList" class="content-box"></ul>
+
+
         <input type="button" id="sendmessage" value="Send a message" /><br />
 <textarea id="latestMessage" class="lastMessage" rows="5" cols="33"></textarea>
 
@@ -29,7 +33,7 @@
     <!--Add script to update the page and send messages.-->
     <script type="text/javascript">
 
-
+        //hide or shw the warning message if the user is admin
         function hideWarningMessageAdmin() {
             let name1 = document.getElementById("Name").value;
             let name = name1.trim(); //trim whitespace
@@ -55,13 +59,13 @@
             //get the messages and store to send use in  connection.invoke
             var messageInput = document.getElementById('message');
             var warningInput = document.getElementById('WarningMessageAdmin');
+            var roomLockdown = document.getElementById('RoomLockdown');
             document.getElementById('latestMessage').value = "Most recent message"; //default
             document.getElementById('message').value = "Type a message";  //default
 
             // Get the user name and store it to prepend to messages.
             var name1 = prompt('Enter your Name and Room Number:', '');
             let name = name1.trim(); //trim whitespace
-
             document.getElementById("Name").value = name; //pass to name input box
 
 
@@ -75,7 +79,7 @@
                 .build();
 
             // Create a function that the hub can call to broadcast messages. The on method allows the server to call the code in it directly. Here’s where the UI is updated – in this case, simply adding messages to a list item. It’s a good practice to encode the data
-            connection.on('broadcastMessage', function (name, message, WarningMessageAdmin) {
+            connection.on('broadcastMessage', function (name, message, WarningMessageAdmin, RoomLockdown) {
 
                 //time to add to list
                 var today = new Date();
@@ -86,18 +90,34 @@
                 var encodedName = name;
                 var encodedMsg = message;
                 var encodedWarning = WarningMessageAdmin;
+                var encodedRoomLockdown = RoomLockdown;
 
-                //create a text element and pass the data to it then pass to text box
-                var text = document.createElement('text');
 
-                text.innerHTML = encodedName + "   " + encodedMsg;
-                document.getElementById('latestMessage').value = text.innerHTML;
+                if (encodedMsg != '') {
 
-                // Add the message to the page in a List Element
-                var liElement = document.createElement('li');
-                liElement.innerHTML = time + '&nbsp;&nbsp;<strong>' + encodedName + '</strong>:&nbsp;&nbsp;' + encodedMsg;
+                    //create a text element and pass the data to it then pass to text box
+                    var text = document.createElement('text');
 
-                document.getElementById('discussion').prepend(liElement);
+                    text.innerHTML = encodedName + "   " + encodedMsg;
+                    document.getElementById('latestMessage').value = text.innerHTML;
+
+                    // Add the message to the page in a List Element
+                    var liElement = document.createElement('li');
+                    liElement.innerHTML = time + '&nbsp;&nbsp;<strong>' + encodedName + '</strong>:&nbsp;&nbsp;' + encodedMsg;
+
+                    document.getElementById('discussion').prepend(liElement);
+
+                }
+                //add the encodedRoomLockdown to the lockeddown list
+
+
+                if (encodedRoomLockdown != '') {
+                    var liElement = document.createElement('li');
+                    liElement.innerHTML = encodedRoomLockdown;
+
+                    document.getElementById('roomLockdownList').prepend(liElement);
+
+                }
 
                 //add the warning message to the relevent boxes
 
@@ -116,10 +136,11 @@
                     console.log('connection started');
                     document.getElementById('sendmessage').addEventListener('click', function (event) {
                         // Call the Send method on the hub. To make calls to the server, wire up an event to a button or other UI element, capture the data you want to send, and call the invoke method
-                        connection.invoke('send', name, messageInput.value, warningInput.value);
+                        connection.invoke('send', name, messageInput.value, warningInput.value, roomLockdown.value );
 
                         // Clear text box and reset focus for next comment.
                         messageInput.value = '';
+                        roomLockdown.value = '';
                         messageInput.focus();
                         event.preventDefault();
                     });
