--- a/ChatSample/wwwroot/lockdown.html
+++ b/ChatSample/wwwroot/lockdown.html
@@ -1,35 +1,101 @@
 ﻿<!DOCTYPE html>
-<html>
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Vision College LockDown</title>
-    <link href="css/Style.css" rel="stylesheet" />
+    <meta charset="utf-8" />
+    <title>Vision College Lockdown</title>
+
+
+    <style>
+
+        body, html {
+            height: 100%;
+            margin: 0;
+        }
+
+        html {
+            background: url(stripes.png) no-repeat center center fixed;
+            background-size: cover;
+        }
+
+        .ULformat {
+            margin: auto;
+            width: 70%;
+            border: 4px solid red;
+            border-radius: 25px;
+            padding: 10px;
+            font-weight: bold;
+            font-size: x-large;
+            background-color: rgba(255, 255, 255, 0.55);
+        }
+
+        h1 {
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-weight: bold;
+            font-size: xx-large;
+            color: red;
+            text-align: center;
+        }
+    </style>
+
+
 
 
 </head>
-<body style="background-color: red">
-    <div class="container">
-        <h1>Vision College LockDown Alert</h1>
-        <h2 id="WarningMessageShow">This is NOT a drill</h2>
-        <scroll-container-lockdown>
-
-            <ul>
-                <li>Lock and/or barricade the door.</li>
-                <li>Silence your cell phone, including the vibrate feature.</li>
-                <li>Hide behind large objects if possible.</li>
-                <li>Remain very quiet and do not leave until directed by law enforcement officers.</li>
-                <li>
-                    Your hiding place should:
-                    <ul>
-                        <li><span style="color: #666666; ">Be out of the shooter’s view</span>.</li>
-                        <li><span style="color: #666666;">Provide protection if shots are fired in your direction</span></li>
-                        <li><span style="color: #666666; ">Do Not trap or restrict your options for movement</span></li>
-                    </ul>
-                </li>
-            </ul>
-        </scroll-container-lockdown>
+<body onload="playAudio()">
+    <h1>Vision College Lock Down</h1>
 
 
+    <audio id="myAudio">
+        <source src="Alarm.mp3" type="audio/mp3">
+    </audio>
+    <!--<input onclick="playAudio()" type="button" value="Play Alarm"> -->
+    <input onclick="pauseAudio()" type="button" value="Stop Alarm">
+
+    <div class="ULformat" margin-top="90px">
+        <ul>
+            <li>Lock and/or barricade the door.</li>
+            <li>Silence your cell phone, including the vibrate feature.</li>
+            <li>Hide behind large objects if possible.</li>
+            <li>Remain very quiet and do not leave until directed by law enforcement officers.</li>
+            <li>
+                Your hiding place should:
+                <ul>
+                    <li>Be out of the persons view.</li>
+                    <li>Provide protection if shots are fired in your direction</li>
+                    <li>Do Not trap or restrict your options for movement</li>
+                </ul>
+            </li>
+        </ul>
     </div>
-
 </body>
+
 </html>
+
+
+<!--Add script to update the page and send messages.-->
+<script type="text/javascript">
+
+
+    //play alarm and pause Alarm
+
+    var audio = document.getElementById("myAudio");
+
+
+    function playAudio() {
+        audio.loop = true;
+
+        audio.play();
+
+    }
+
+    function pauseAudio() {
+        audio.pause();
+    }
+
+
+</script>
+
+
+
+
